--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <title>Samuel Vsquez</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZDM5D5XK4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GZDM5D5XK4');
+</script>
+
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
